fixed dark mode emojis

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,7 +1,7 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   filter: invert(1);
-  img {
+  img, .emoji {
     filter: invert(1);
 
     &.ioda { filter: invert(0); }
